<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/all_events_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_events"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/my_events_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_events"
            />


    </com.google.android.material.tabs.TabLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteNew"
        android:id="@+id/event_recycler_view"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:contentDescription="@string/compose_event"
        app:srcCompat="@drawable/ic_add"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>




</LinearLayout>
