<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_margin="10dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Создать мероприятия:"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/event_title"
                android:enabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/compose_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description"
            android:enabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/compose_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_time"
                android:enabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/compose_time"
                    android:focusableInTouchMode="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_date"
                android:enabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/compose_date"
                    android:focusableInTouchMode="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_location"
                android:enabled="true"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/compose_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="true"

                    />
            </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/preview_photo"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Выбрать картинку"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_button" />


</LinearLayout>

</ScrollView>